src/main/java/com/example/finalprojectdtomarket/errors/exception/Exception400.java
package com.example.finalprojectdtomarket.errors.exception;

public class Exception400 extends RuntimeException {
    public Exception400(String msg) {
        super(msg);
    }
}
